--- a/package.json
+++ b/package.json
@@ -10,9 +10,16 @@
         "production": "mix --production"
     },
     "devDependencies": {
+        "autoprefixer": "^10.4.21",
         "axios": "^0.21",
         "laravel-mix": "^6.0.6",
+        "laravel-vite-plugin": "^1.3.0",
         "lodash": "^4.17.19",
-        "postcss": "^8.1.14"
+        "postcss": "^8.5.4",
+        "tailwindcss": "^3.4.17",
+        "vite": "^6.3.5"
+    },
+    "dependencies": {
+        "alpinejs": "^3.14.9"
     }
 }
